# ZEKAs_Codeground-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.ko.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.aws/: ecs-task-definition.json
.github/workflows/: codeground-ci-cd.yaml
data/: prob-bronze.json  prob-challenger.json  prob-diamond.json  prob-gold.json  prob-platinum.json  prob-silver.json
migration/: env.py
migration/versions/: b8d7c4bc5787_create_users_table.py
src/app/: main.py
src/app/config/: config.py
src/app/core/: database.py  password.py  security.py  token.py
src/app/domain/analysis/: __init__.py
src/app/domain/analysis/crud/: analysis_crud.py
src/app/domain/analysis/router/: analysis_controller.py
src/app/domain/analysis/schemas/: analysis_schemas.py
src/app/domain/analysis/service/: analysis_service.py
src/app/domain/auth/: __init__.py
src/app/domain/auth/crud/: auth_crud.py
src/app/domain/auth/router/: auth_controller.py
src/app/domain/auth/schemas/: auth_schemas.py
src/app/domain/auth/service/: auth_service.py
src/app/domain/game/: __init__.py
src/app/domain/game/crud/: game_crud.py
src/app/domain/game/router/: game_controller.py  submit_controller.py
src/app/domain/game/schemas/: game_schemas.py
src/app/domain/game/service/: game_result_service.py  (+2 more)
src/app/domain/match/: __init__.py
src/app/domain/user/: __init__.py
src/app/domain/webrtc/: __init__.py
src/app/models/: models.py
src/app/utils/: email.py  game_session.py  tier_util.py  ws_manager.py
src/resource/static/: submit_sse.html  webrtc_test.html
src/scripts/: insert_problems.py
(+23 files in other folders)
